# silverbullet-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  dagger.dang  dagger.json  devenv.nix  devenv.yaml
.github/actions/devenv/: action.yaml
.github/actions/devenv-rust/: action.yaml
.github/actions/rust/: action.yaml
.github/workflows/: analysis-scorecard.yaml  ci-nix.yaml  ci.yaml  release.yaml
.zed/: settings.json
core/: Cargo.toml
core/src/: client.rs  fs.rs  lib.rs  server.rs  shell.rs
core/src/fs/: embed.rs  layer.rs  now.rs  opendal.rs  utils.rs
core/src/server/: error.rs  fs.rs
silverbullet/: Cargo.toml
silverbullet-server/: Cargo.toml
silverbullet-server/src/: main.rs
silverbullet/src/: client.rs  fs.rs  lib.rs  proxy.rs  server.rs  shell.rs  ssr.rs
silverbullet/src/client/: tracing.rs
silverbullet/src/fs/: cloudflare.rs  embed.rs  layer.rs  opendal.rs  utils.rs
silverbullet/src/proxy/: reqwest.rs
silverbullet/src/server/: error.rs  fs.rs  routes.rs
silverbullet/src/server/routes/: fs.rs  log.rs  proxy.rs  shell.rs
silverbullet/src/ssr/: minijinja.rs
