[package]
name = "silverbullet"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.0"
opendal = { version = "0.55.0", optional = true }
futures = "0.3.31"
mime_guess = { version = "2.0.5", optional = true}
serde = { version = "1.0.228", features = ["derive"] }
rust-embed = { version = "8.9.0", features = ["interpolate-folder-path", "mime-guess"], optional = true }
thiserror = "2.0.17"
web-time = { version = "0.1.0", optional = true }

[features]
default = []
embed = ["dep:rust-embed", "dep:web-time"]
opendal = ["dep:opendal", "dep:mime_guess", "dep:web-time"]
