[package]
name = "silverbullet-server"
edition = { workspace = true }
version = { workspace = true }
description = "Silverbullet server implementation"
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
silverbullet = { workspace = true, features = ["server", "http", "reqwest", "opendal", "tracing"] }

axum = { version = "0.8.8", features = ["macros"] }
http = "1.4.0"
opendal = { version = "0.55.0", default-features = false, features = ["services-memory"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
proxy = ["silverbullet/reqwest"]
