[package]
name = "silverbullet"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", default-features = false, features = ["json", "macros"], optional = true }
axum-client-ip = { version = "1.2.0", default-features = false, optional = true }
bytes = "1.11.0"
futures = "0.3.32"
http = "1.4.0"
http-body-util = { version = "0.1" }
opendal = { version = "0.55.0", default-features = false, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path", "mime-guess"], optional = true }
thiserror = "2.0.18"
tracing = { version = "0.1", optional = true }
worker = { version = "0.7", optional = true }
worker-macros = { version = "0.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { version = "1.1.0" }

[features]
default = []

axum = ["dep:axum"]
cloudflare = ["dep:worker", "dep:worker-macros"]
debug = []
embed = ["dep:rust-embed"]
reqwest = ["dep:reqwest"]
proxy-cloudflare = ["cloudflare"]
opendal = ["dep:opendal"]
server = ["axum", "dep:axum-client-ip"]
tracing = ["dep:tracing"]
unsafe = []

[dev-dependencies]
opendal = { version = "0.55.0", default-features = false, features = ["services-memory"] }
tokio = { version = "1", features = ["rt", "macros"] }
